--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,26 @@
-.nav-item{
+.nav-item {
     font-family: cursive;
+}
+
+.images {
+    /* height: 100px; */
+    object-fit: contain;
+}
+
+.productpage,
+.details {
+    background-color: rgba(218, 218, 218, 0.423);
+}
+
+.phonename {
+    font-family: cursive;
+}
+
+.card:hover {
+    background-color: rgba(218, 218, 218, 0.423);
+}
+.addcart{
+    left: -100%;
+    transition: left 0.5s ease;
+    opacity: 0;
 }
