--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,19 @@
 .card:hover {
     background-color: rgba(218, 218, 218, 0.423);
 }
-.addcart{
+
+.addcart {
     left: -100%;
     transition: left 0.5s ease;
     opacity: 0;
+}
+
+.fulldescription {
+    /* width: 100%;
+    height: 100%; */
+    z-index: 50;
+   background-color: white;
+}
+.show{
+    z-index: 100;
 }
